feat(timepicker): allow up and down arrow icon class to be customized
Signed-off-by: Max Fierke <fierk007@umn.edu>

--- a/template/timepicker/timepicker.html
+++ b/template/timepicker/timepicker.html
@@ -1,9 +1,9 @@
 <table>
 	<tbody>
 		<tr class="text-center">
-			<td><a ng-click="incrementHours()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-up"></span></a></td>
+			<td><a ng-click="incrementHours()" class="btn btn-link"><span ng-class="upIconClass"></span></a></td>
 			<td>&nbsp;</td>
-			<td><a ng-click="incrementMinutes()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-up"></span></a></td>
+			<td><a ng-click="incrementMinutes()" class="btn btn-link"><span ng-class="upIconClass"></span></a></td>
 			<td ng-show="showMeridian"></td>
 		</tr>
 		<tr>
@@ -17,9 +17,9 @@
 			<td ng-show="showMeridian"><button type="button" class="btn btn-default text-center" ng-click="toggleMeridian()">{{meridian}}</button></td>
 		</tr>
 		<tr class="text-center">
-			<td><a ng-click="decrementHours()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-down"></span></a></td>
+			<td><a ng-click="decrementHours()" class="btn btn-link"><span ng-class="downIconClass"></span></a></td>
 			<td>&nbsp;</td>
-			<td><a ng-click="decrementMinutes()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-down"></span></a></td>
+			<td><a ng-click="decrementMinutes()" class="btn btn-link"><span ng-class="downIconClass"></span></a></td>
 			<td ng-show="showMeridian"></td>
 		</tr>
 	</tbody>
